--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.9.0",
-    "cors": "^2.8.5",
-    "openai": "^4.100.0"
+    "axios": "1.9.0",
+    "cors": "2.8.5",
+    "openai": "4.100.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.18",
-    "@types/node": "^22.15.20",
-    "@vercel/node": "^5.1.16",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "@types/cors": "2.8.18",
+    "@types/node": "22.15.20",
+    "@vercel/node": "5.1.16",
+    "ts-node": "10.9.2",
+    "typescript": "5.8.3"
+  },
+  "overrides": {
+    "esbuild": "0.25.0",
+    "path-to-regexp": "6.3.0",
+    "undici": "5.29.0"
   }
 }
