--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "quick-vint-api",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .ts,.js",
+    "type-check": "tsc --noEmit",
+    "format-check": "prettier --check ."
   },
   "keywords": [],
   "author": "",
@@ -14,9 +17,18 @@
     "openai": "4.100.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.27.0",
     "@types/cors": "2.8.18",
     "@types/node": "22.15.20",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "@vercel/node": "5.1.16",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.4.0",
+    "prettier": "^3.5.3",
     "ts-node": "10.9.2",
     "typescript": "5.8.3"
   },
