--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts,.js",
     "type-check": "tsc --noEmit",
-    "format-check": "prettier --check ."
+    "format-check": "prettier --check .",
+    "dev:api": "esbuild api/generate.ts --bundle --platform=node --minify --outfile=dist/api/generate.js --watch",
+    "build:api": "esbuild api/generate.ts --bundle --platform=node --minify --outfile=dist/api/generate.js",
+    "vercel-build": "npm run build:api"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "@vercel/node": "5.1.16",
+    "esbuild": "^0.25.0",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
@@ -33,8 +37,10 @@
     "typescript": "5.8.3"
   },
   "overrides": {
-    "esbuild": "0.25.0",
+    "@vercel/node": {
+      "esbuild": "0.25.0"
+    },
     "path-to-regexp": "6.3.0",
-    "undici": "5.29.0"
+    "undici": "5.28.5"
   }
 }
