--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type-check": "tsc --noEmit",
     "format-check": "prettier --check .",
     "dev:api": "esbuild api/generate.ts --bundle --platform=node --minify --outfile=dist/api/generate.js --watch",
-    "build:api": "esbuild api/generate.ts --bundle --platform=node --minify --outfile=dist/api/generate.js",
+    "build:api": "esbuild api/generate.ts --bundle --platform=node --target=node18 --format=cjs --minify --outfile=dist/api/generate.js",
     "vercel-build": "npm run build:api"
   },
   "keywords": [],
