--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.8",
     "axios": "1.9.0",
     "cors": "2.8.5",
     "openai": "4.100.0"
