--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
     {
       "src": "/api/generate",
       "dest": "/api/generate.js"
+    },
+    {
+      "src": "/api/auth/magic-link",
+      "dest": "/api/auth/magic-link.js"
     }
   ]
 }
