--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "axios": "1.9.0",
     "cors": "2.8.5",
+    "micro": "^10.0.1",
     "openai": "4.100.0"
   },
   "devDependencies": {
