added an index page

--- a/vercel.json
+++ b/vercel.json
@@ -32,6 +32,14 @@
     {
       "src": "/api/gumroad/ping",
       "dest": "/api/gumroad/ping.js"
+    },
+    {
+      "src": "/$",
+      "dest": "/index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
     }
   ]
 }
