--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "axios": "1.9.0",
     "cors": "2.8.5",
     "micro": "^10.0.1",
-    "openai": "4.100.0"
+    "openai": "4.100.0",
+    "stripe": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
