add create checkout function

--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,11 @@
       "src": "api/stripe/webhook.ts",
       "use": "@vercel/node",
       "config": { "zeroConfig": true }
+    },
+    {
+      "src": "api/stripe/create-checkout.ts",
+      "use": "@vercel/node",
+      "config": { "zeroConfig": true }
     }
   ],
 
@@ -32,6 +37,10 @@
     {
       "src": "/api/stripe/webhook",
       "dest": "/api/stripe/webhook.js"
+    },
+    {
+      "src": "/api/stripe/crate-checkout",
+      "dest": "/api/stripe/crate-checkout.js"
     }
   ]
 }
