--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "quick-vint-api",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vercel dev"
+    "dev": "vercel dev",
+    "lint": "eslint api/ utils/ --ext .ts",
+    "lint:fix": "eslint api/ utils/ --ext .ts --fix",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write \"**/*.{ts,js,json,md}\"",
+    "format-check": "prettier --check \"**/*.{ts,js,json,md}\""
   },
   "keywords": [],
   "author": "",
