Fix cron schedule for Vercel Hobby plan limits

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     },
     {
       "path": "/api/cron/cleanup-rate-limits",
-      "schedule": "0 */6 * * *"
+      "schedule": "0 6 * * *"
     }
   ]
 }
