update netlify build steps

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "lint:fix": "eslint api/ utils/ --ext .ts --fix",
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"**/*.{ts,js,json,md}\"",
-    "format-check": "prettier --check \"**/*.{ts,js,json,md}\"",
-    "build": "npx tsc -p tsconfig.netlify.json"
+    "format-check": "prettier --check \"**/*.{ts,js,json,md}\""
   },
   "keywords": [],
   "author": "",
