--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,17 @@
 # This file tells Netlify exactly how to build your site.
 
 [build]
-  # This is the command Netlify will run to compile your TypeScript
-  command = "npm run build"
+  # We no longer need a build command here.
   # The directory with your website files (index.html, etc.)
   publish = "public"
 
+# This new functions configuration is the key.
 [functions]
-  # This tells Netlify where to find the COMPILED JavaScript functions
-  directory = "dist/api"
+  # Point directly to your SOURCE directory for functions.
+  directory = "api"
+  # Use the esbuild bundler, which handles TypeScript and subdirectories correctly.
   node_bundler = "esbuild"
+  # IMPORTANT: This tells the bundler to include your shared utility files
+  # when it packages the functions.
+  included_files = ["utils/**"]
+
