--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.8",
     "axios": "1.12.2",
+    "busboy": "^1.6.0",
     "cors": "2.8.5",
     "micro": "^10.0.1",
     "openai": "4.100.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.27.0",
+    "@types/busboy": "^1.5.4",
     "@types/cors": "2.8.18",
     "@types/node": "22.15.20",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
