--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron/cleanup-rate-limits",
       "schedule": "0 6 * * *"
+    },
+    {
+      "path": "/api/cron/cleanup-temp-uploads",
+      "schedule": "0 4 * * *"
     }
   ]
 }
