migrate to nextjs

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,26 @@
+# Supabase Configuration
+VERCEL_APP_SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+
+# OpenAI
 VERCEL_APP_OPENAI_API_KEY=
+
+# Stripe
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_SUCCESS_URL=
+STRIPE_CANCEL_URL=
+STRIPE_PORTAL_RETURN_URL=
+
+# CORS / Security
 VERCEL_APP_ALLOWED_ORIGINS=
+VERCEL_APP_SITE_URL=
+
+# Admin & System
 ADMIN_SECRET=
 CRON_SECRET=
+
+# App Configuration
+NEXT_PUBLIC_APP_URL=
