--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,51 @@
-.vercel
+# Dependencies
 node_modules/
-.env*.local
+.pnpm-store/
+
+# Next.js
+.next/
+out/
+
+# Environment variables
 .env
+.env*.local
+.env.development
+.env.production
+
+# Vercel
+.vercel
+
+# Build outputs
+dist/
+build/
+.cache/
+
+# Lock files - pnpm only
+package-lock.json
+yarn.lock
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Editor directories
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
+
+# Testing
+coverage/
+.nyc_output/
+
+# Misc
+*.pem
+*.cert
+*.key
