--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,11 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["api/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.astro",
+    "src/env.d.ts",
+    "api/**/*.ts"
+  ]
 }
