email templates and token unsub

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "2.8.5",
     "micro": "^10.0.1",
     "openai": "4.100.0",
+    "resend": "^6.9.2",
     "stripe": "^18.2.0",
     "tailwindcss": "^4.1.18"
   },
