--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "module": "commonjs",
+    "module": "node16",
+    "moduleResolution": "node16",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -13,6 +14,7 @@
     "src/**/*.tsx",
     "src/**/*.astro",
     "src/env.d.ts",
-    "api/**/*.ts"
+    "api/**/*.ts",
+    "utils/**/*.ts"
   ]
 }
